booking converting to typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "declarationMap": true,
 
     // Stricter Typechecking Options
+    "strictNullChecks": true,
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
 
