--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,9 @@
     "declarationMap": true,
 
     // Stricter Typechecking Options
-    "strictNullChecks": true,
-    "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
+    // "strictNullChecks": true,
+    // "noUncheckedIndexedAccess": true,
+    // "exactOptionalPropertyTypes": true,
 
     // Style Options
     // "noImplicitReturns": true,
